# neuro-spark

./: .dockerignore  .dvcignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  dashboard_eeg.py  dvc.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
Analyse Cerveau/: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dashboard.py  dashboard_eeg.py  docker-compose.yml  dvc.yaml  entrypoint.sh  pyproject.toml  rapport_reflexif_poc_eeg.md  rapport_reflexif_v2.md  requirements.txt
Analyse Cerveau/assets/: style.css
Analyse Cerveau/conf/base/: catalog.yml  catalog_streaming.yml  logging.yml  parameters.yml  spark.yml
Analyse Cerveau/docs/: CHEATSHEET.md  MES_NOTES_ORAL.md  SLIDES.md  rapport_reflexif_v2.md
Analyse Cerveau/scripts/: download_eeg.py  stream_producer_eeg.py
Analyse Cerveau/src/neuro_spark/: __init__.py  core.py  pipeline_registry.py  settings.py
Analyse Cerveau/src/neuro_spark/pipelines/: __init__.py  evaluation.py  export_dashboard.py  features.py  ingestion.py  training.py
Analyse Cerveau/src/neuro_spark/pipelines/evaluation/: nodes.py
Analyse Cerveau/src/neuro_spark/pipelines/export_dashboard/: nodes.py
Analyse Cerveau/src/neuro_spark/pipelines/features/: nodes.py  pipeline.py
Analyse Cerveau/src/neuro_spark/pipelines/ingestion/: nodes.py
Analyse Cerveau/src/neuro_spark/pipelines/streaming_eeg/: nodes.py  pipeline.py
Analyse Cerveau/src/neuro_spark/pipelines/training/: nodes.py
Analyse Cerveau/warehouse/etape1_poc/: poc_eeg.ipynb
(+30 files in other folders)
