[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro_spark"
version = "2.3.0"
dependencies = [
    "kedro>=1.0",
    "kedro-datasets[spark,json]",
    "pyspark>=3.5",
    "mne>=1.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.14",
    "mlflow>=2.20",
    "pyarrow>=16",
    "plotly>=5.22",
    "dash>=2.14",
    "tqdm>=4.66",
]

[tool.kedro]
package_name = "neuro_spark"
project_name = "NeuroSpark — EEG Motor Imagery"
kedro_init_version = "1.3.1"
source_dir = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.kedro_telemetry]
project_id = "d5ae05db31a643dcade109fd7681a622"
